--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
 .main_visual .swiper{width:100%; height:100%;}
 .main_visual h2{display:none;}
 .main_visual img{display:block; width:100%;}
+.main_visual .swiper-pagination-bullet{background-color:#E41937;}
 
 /* ========== 공통 섹션 ========== */
 #cont1, #cont2, #cont3, #cont4, #cont5{
